# readstr

./: .gitignore  README.md  flake.nix  justfile  rmp.toml  test.txt  zapstore.yaml
.claude/: napkin.md
.github/workflows/: android.yml  desktop.yml
.planning/quick/260325-kp4-prepare-speedreading-app-for-open-source/: 260325-kp4-PLAN.md  260325-kp4-SUMMARY.md
.planning/quick/260326-t2b-clean-up-unused-import-warnings-from-pha/: 260326-t2b-SUMMARY.md
.planning/quick/260327-8m3-main-screen-where-files-are-opened-or-te/: 260327-8m3-SUMMARY.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/disobey/readstr/: AppManager.kt  MainActivity.kt
android/app/src/main/res/values/: font_certs.xml  strings.xml  themes.xml
desktop/iced/: Cargo.toml
desktop/iced/src/: main.rs
desktop/iced/src/views/: landing.rs  mod.rs  reading.rs
desktop/iced/src/widgets/: mod.rs  seek_bar.rs
ios/: Info.plist  project.yml
ios/Sources/: App.swift  AppManager.swift  ContentView.swift
ios/Sources/Helpers/: FileSandboxHelper.swift
ios/Sources/Views/: LandingView.swift  ReadingView.swift
rust/: Cargo.toml  speedreading.db  uniffi.toml
rust/src/: actions.rs  lib.rs  state.rs  updates.rs
rust/src/core/: actor.rs  history.rs  mod.rs  parser.rs  session.rs
rust/tests/: parser_tests.rs  playback_tests.rs  session_tests.rs
rust/tests/fixtures/: sample.epub  sample.txt
uniffi-bindgen/: Cargo.toml
(+15 files in other folders)
