[package]
name = "speedreading-app_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flume = "0.11"
uniffi = "= 0.31.0"
pdf-extract = "0.10"
epub = "2"
rusqlite = { version = "0.36", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
anyhow = "1"
sha2 = "0.10"
