[package]
name = "readstr_desktop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
readstr_core = { path = "../../rust" }
iced = { version = "0.14", features = ["advanced"] }
flume = "0.11"
dirs-next = "2"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
